--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ table {
 
 #info_header{
 	border: 1px  solid black;
-	width: 1280px;
+	width: 100%;
 	height: 78px;
 	
 	display: flex;
@@ -78,12 +78,18 @@ table {
 	width: 100%;
 }
 .all_wrap{
-	width: 1200px;
+	width: 90%;
 	margin: 0 auto;
 	
 }
-
-
+.vid{
+	position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .info{
 	border: 1px solid black;
 	flex-grow: 1;
@@ -97,9 +103,9 @@ table {
 #header{
 	display: flex;
     width: 100%;
-    height: 700px;
+    height: 1100px;
 	border: 1px  solid black;
-}
+	margin: 0;}
 
 #main{
 	display: flex;
@@ -109,10 +115,13 @@ table {
 	
 }
 
+
 .main_wrap{
-	width: 1100px;
+	width: 1040px;
+	
 	display: flex;
   	margin: 0 auto;
+	
 }
 #categori{
 	width: 100%;
@@ -125,4 +134,26 @@ table {
 	width: 1200px;
 	margin: 0 auto;
 	border: 1px solid black;
+}
+
+#footer{
+	border: 1px solid black;
+	width: 100%;
+	height: 51px;
+	margin: 40px 0px 120px;
+}
+
+.section1, .section3, .section5, .section7, .section9{
+	width: 520px;
+	height: 570px;
+	float: left;
+	border: 1px solid black;
+	box-sizing: border-box;
+}
+.section2, .section4, .section6, .section8, .section10{
+	width: 520px;
+	height: 570px;
+	float: right;
+	border: 1px solid black;
+	box-sizing: border-box;
 }
