--- a/main.css
+++ b/main.css
@@ -47,10 +47,10 @@ table {
 	/* border: 1px  solid black; */
 	width: 100%;
 	height: 78px;
-	
+	position: fixed;
 	display: flex;
 	align-items: center;
-	
+	opacity: 1s;
 }
 
 .info_wrap{
@@ -67,7 +67,6 @@ table {
 	height: 30px;
 	width: 125px;
 	float: left;
-	background-color: black;
 	margin: 0 auto;
 	text-align: center;
 }
@@ -99,6 +98,7 @@ table {
 	display: flex;
   	justify-content: center;
 	font-size: 14px;
+	color: white;
 }
 #header{
 	display: flex;
