--- a/introduce_company.css
+++ b/introduce_company.css
@@ -109,29 +109,44 @@ table {
 
 .intro_main{
     border: 1px solid black;
-    width: 1960px;
-    height: 6216px;
-    padding-left: 400px;
-    padding-right: 400px;
+    width: 1170px;
+    height: 1723px;
+    margin: 0 auto;
+	margin-top: 300px;
 }
 .intro_title_box{
     width: 520px;
     height: 250px;
     border: 1px solid black;
+	
 }
 .intro_title{
     width: 520px;
     height: 150px;
     border: 1px solid black;
+	font-size: 42px;
 }
 .intro_comment{
     width: 520px;
     height: 100px;
     border: 1px solid black;
+	font-size: 20px;
+	opacity: 0.5;
 }
 .intro_history{
     width: 640px;
-    height: 100%;
+    height: 1476px;
     border: 1px solid black;
     float: right;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+}
+.year{
+	flex-grow: 1;
+	flex-basis: 0;
+	border: 1px solid black;
+	font-size: 18px;
+	display: flex;
+	align-items: center;
 }
