--- a/introduce_company.css
+++ b/introduce_company.css
@@ -108,7 +108,7 @@ table {
 	margin: 0;}
 
 .intro_main{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 1180px;
     height: 1723px;
     margin: 0 auto;
@@ -117,20 +117,20 @@ table {
 .intro_title_box{
     width: 520px;
     height: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 	float: left;
 }
 .intro_title{
     width: 520px;
     height: 150px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 	font-size: 50px;
 	font-family: 'Jua', sans-serif;
 }
 .intro_comment{
     width: 520px;
     height: 100px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 	font-size: 20px;
 	opacity: 0.5;
 	font-family: 'Jua', sans-serif;
@@ -138,7 +138,7 @@ table {
 .intro_history{
     width: 650px;
     height: 1700px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     float: right;
 	text-align: center;
 	display: flex;
@@ -147,7 +147,7 @@ table {
 .year{
 	flex-grow: 1;
 	flex-basis: 0;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	font-size: 18px;
 	display: flex;
 	align-items: center;
@@ -177,15 +177,18 @@ strong{
 }
 
 .picture_box{
-	width:100%;
 	height: 320px;
-	border: 1px solid black;
-	margin-top: 300px;
+	/* border: 1px solid black; */
+	margin-top: 150px;
+}
+.move_img{
+	height: 320px;
+	width: 6600px;
 }
 .footer_comment_box{
 	width: 100%;
 	height: 250px;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	margin-top: 150px;
 	display: flex;
 	flex-direction: column;
@@ -193,7 +196,7 @@ strong{
 .footer_comment{
 	flex-grow: 1;
 	flex-basis: 0;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	text-align: center;
 	font-size: 38px;
 	font-family: 'Jua', sans-serif;
@@ -284,11 +287,102 @@ img{
 .story{
 	width: 100%;
 	height: 48px;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	margin-top: 100px;
 }
 .cmt{
 	text-align: center;
 	font-size: 48px;
 	font-family: 'Jua', sans-serif;
+}
+.footer_img{
+	width: 1960px;
+	height: 500px;
+	/* border: 1px solid black; */
+	position: relative;
+	margin-top: 100px;
+}
+.footer_img img{
+	
+	vertical-align: middle;
+}
+.img_text{
+	position: absolute;
+	top: 40%;
+	left: 45%;
+	width: 1000px;
+	transform: translate( -50%, -50%);
+	font-size: 45px;
+	color: white;
+	font-family: 'Jua', sans-serif;
+}
+
+.btn1{
+	position: absolute;
+	top: 65%;
+	left: 25%;
+	width: 10%;
+	transform: translate( -50%, -50%);
+	font-size: 20px;
+	font-family: 'Jua', sans-serif;
+	padding: 10px;
+	border: none;
+}
+
+#categori{
+	width: 100%;
+	height: 319px;
+	/* border: 1px solid black; */
+	display: flex;
+	border-top: 1px solid gray;
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.wrap_categori{
+	width: 1200px;
+	margin: 0 auto;
+	/* border: 1px solid black; */
+	display: flex;
+	flex-direction: row;
+}
+.categori_line{
+	/* border: 1px solid black; */
+	flex-grow: 1;
+	flex-basis: 0;
+	padding: 30px;
+}
+
+#footer{
+	/* border: 1px solid black; */
+	width: 1150px;
+	height: 51px;
+	margin: 0 auto;
+	padding-bottom: 50px;
+	padding-top: 50px;
+	border-top: 1px solid gray;
+	padding-top: 50px;
+	padding-bottom: 100px;
+}
+li{
+	font-size: 14px;
+	line-height: 25px;
+}
+b{
+	font-weight: bold;
+}
+
+.social_blank{
+	width: 124px;
+	height: 29px;
+	/* border: 1px solid black; */
+	float: right;
+	margin-top: -40px;
+	display: flex;
+	flex-direction: row;
+}
+.sns{
+	flex-grow: 1;
+	flex-basis: 0;
+	/* border: 1px solid black; */
 }
